objects/SFDC_Test_Case__c.object
<CustomObject>
    <description>Test Cases outline specific prerequisites for certain testing scenarios, and their expected results.</description>
    <fields>
        <fullName>Expected_Results__c</fullName>
        <label>Expected Results</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Impact_Tab__c</fullName>
        <description>Tab support case is enhancing</description>
        <label>Impact Tab</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounts</fullName>
                </value>
                <value>
                    <fullName>Contacts</fullName>
                </value>
                <value>
                    <fullName>Leads</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Spring CM</fullName>
                </value>
                <value>
                    <fullName>Prospects</fullName>
                </value>
                <value>
                    <fullName>WRF Tasks</fullName>
                </value>
                <value>
                    <fullName>Profile</fullName>
                </value>
                <value>
                    <fullName>Duplicate Warning</fullName>
                </value>
                <value>
                    <fullName>Duplicate Scenario</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Tab__c</fullName>
        <label>Other Impact Tab</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prerequisites_and_Initial_Conditions__c</fullName>
        <label>Prerequisites and Initial Conditions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Prerequisites_and_Initial_Conditions_del__c</fullName>
        <label>Test Case Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Regression_Parent_Case__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Regression Parent Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Test Cases (Regression Parent Case)</relationshipLabel>
        <relationshipName>Test_Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sprint_Name__c</fullName>
        <formula>Support_Case__r.SPRINT_NAME__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sprint Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
                <value>
                    <fullName>Not Required</fullName>
                </value>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Step10_Description__c</fullName>
        <label>Step Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Step10_Expected_Results__c</fullName>
        <label>Expected Results</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Step10_Pass_Fail__c</fullName>
        <label>Pass/Fail</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Step1_Description__c</fullName>
        <label>Step Description</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Step1_Pass_Fail__c</fullName>
        <label>Pass/Fail</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Step2_Actual_Results__c</fullName>
        <label>Actual Results</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Step2_Description__c</fullName>
        <label>Step Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Step2_Expected_Results__c</fullName>
        <label>Expected Results</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Step2_Pass_Fail__c</fullName>
        <label>Pass/Fail</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Step3_Actual_Results__c</fullName>
        <label>Actual Results</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Step3_Expected_Results__c</fullName>
        <label>Expected Results</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Step4_Actual_Results__c</fullName>
        <label>Actual Results</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Support_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Support Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Test Cases</relationshipLabel>
        <relationshipName>Test_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test_Phase__c</fullName>
        <label>Test Phase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unit Test</fullName>
                    <color>#33CC00</color>
                    <label>Unit Test</label>
                </value>
                <value>
                    <fullName>QA Test</fullName>
                    <color>#33CCFF</color>
                    <label>QA Test</label>
                </value>
                <value>
                    <fullName>UAT</fullName>
                    <color>#FFCC66</color>
                    <label>UAT</label>
                </value>
                <value>
                    <fullName>Performance</fullName>
                </value>
                <value>
                    <fullName>Regression</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Type__c</fullName>
        <label>Test Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Functionality</fullName>
                </value>
                <value>
                    <fullName>Integration</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Test Case</label>
    <nameField>
        <displayFormat>TC-{0000}</displayFormat>
        <label>Test Case #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Other_Tab_Not_Null</fullName>
        <active>true</active>
        <description>If Impact tab selection is &apos;Other&apos; then the other tab should be populated</description>
        <errorConditionFormula>AND(ISPICKVAL(Impact_Tab__c , &apos;Other&apos;),ISBLANK(TRIM(Other_Tab__c)))</errorConditionFormula>
        <errorDisplayField>Other_Tab__c</errorDisplayField>
        <errorMessage>A value for the field &apos;Other Tab&apos; is Required, if the value for &apos;impact tab&apos; is &apos;Other&apos;</errorMessage>
    </validationRules>
</CustomObject>